# vector-indexed-db

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
src/: index.ts
src/core/: mod.rs  vector_indexed_db.rs
