[package]
name = "vector-indexed-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"
web-sys = "0.3.69"
hnsw = "0.11.0"
space = { version = "0.17.0", default-features = false, features = ["alloc"] }
